# grpc-client

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  _typos.toml
.github/workflows/: build.yml
docs/: swagger-integration.md  ui-development-status.md
examples/: sample-server.rs
fixtures/: app.yml  test.rest  test.yml
fixtures/certs/: ca.crt  ca.key  grpc.acme.com.crt  grpc.acme.com.key
fixtures/protos/: README.md  example.proto
sample-server/: Cargo.toml  build.rs
sample-server/src/: lib.rs
sample-server/src/pb/: example.rs  mod.rs
specs/: chats_analyze_grpcurl.md  chats_code_quality.md  instructions.md  product-requirements.md  rust-design.md  ui.md
src/: cli.rs  client.rs  codec.rs  connection.rs  domain.rs  format.rs  lib.rs  main.rs  reflection.rs
src/server/: config.rs  handlers.rs  manager.rs  mod.rs  openapi.rs  routes.rs  schema.rs  state.rs
tests/: api_integration.rs  grpc_client_integration.rs
tests/common/: mod.rs
ui/: package.json
ui/src/: App.tsx
ui/src/components/: CallHistory.tsx  MethodCaller.tsx  MethodList.tsx  RequestForm.tsx  ServerSelector.tsx  ServiceList.tsx
ui/src/components/__tests__/: components.test.tsx
ui/src/lib/: api.ts  store.ts
